test/libsolidity/syntaxTests/abstract/interface.sol
abstract interface A { }
// ----
// ParserError: (0-8): Only contracts can be abstract.
